--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   # fl_chart: ^1.0.0
   # flutter_charts: ^0.5.2
   provider: ^6.1.1
+  awesome_notifications: ^0.10.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
