--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: indoor_environmental_monitoring
-description: "A new Flutter project."
+name: EnviroSense
+description: "Flutter application for environmental data collection and analysis"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
